<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Class 2b</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="r1">Black</string>
    <string name="r2">White</string>
    <string name="r3">Red</string>
    <string name="r4">Green</string>
    <string name="r5">Blue</string>
    <string name="text">Alpha</string>

</resources>
